# rpgCore

./: .env.example  .gitignore  .windsurfrules  ADJ_HANDOFF_SUMMARY.md  ADJ_LAYER_IMPLEMENTATION_SUMMARY.md  ADJ_PHASE_3_ALIGNMENT.md  ADJ_README.md  ADJ_SYSTEM_AUDIT.md  ADR_056_PILLAR_INTERFACE_SPEC.md  ADR_058_DELTA_PERSISTENCE.md  APJ_HANDOFF_SESSION_2025-02-28.md  CODEBASE_INDEXING_AUDIT.md  COMPOSITE_SPRITE_SUMMARY.md  COMPREHENSIVE_ENGINE_INVENTORY.md  DEMO_INVENTORY_AUDIT.md  DGT_Launcher.py  DOCSTRING_SYSTEM_AUDIT.md  DOCUMENTATION_INVENTORY.md  ENGINE_ANALYSIS.md  ENGINE_STATUS_REPORT.md  FILE_INVENTORY_AUDIT.md  MASTER_SEED.md  MIYOO_MINI_PLUS_OPTIMIZATION.md  MULTI_PASS_RENDERING_SUMMARY.md  PHASE_3_RENDERING_CONTEXT.md  PLAN.md  PRODUCTION_ENHANCEMENTS.md  PRODUCTION_VALIDATION_REPORT.json  README.md  README_DGT.md  README_HEADLESS_TRAINING.md  README_PILOT_ROSTER.md  README_PRODUCTION_FINAL.md  README_RUST_INTEGRATION.md  README_TRI_MODAL_DISPLAY.md  README_VOLUME_2_FINALE.md  REPOSITORY_MAPPING_AUDIT_SUMMARY.md  SESSION_015_DIRECTIVE.md  SESSION_SUMMARY.md  SPEC.md  (+124 more)
.claude/: settings.local.json
apps/: dashboard.py  genetic_lab_viewer.py  multi_lens_race.py  play_slice.py  space_arena.py  tournament_viewer.py  trinity_dashboard.py
archives/: DGT_Movie_Volume_1.json  DGT_Movie_Volume_1_README.md
assets/: ASSET_MANIFEST.yaml  README_MANIFEST.md  animations.yaml  assets.dgt  entities.yaml  materials.yaml  objects.yaml  objects_obese.yaml  objects_starter.yaml  templates.yaml
config/: system.yaml
data/: Seed_Zero.json  entities.sqlite  factions.sqlite  historian.sqlite  intent_vectors.mmap  legacy.sqlite  legacy_ui_theme.json  locker.json  narratives.json  roster.db  savegame.json  stable.json  stable_backup.json  test_performance_locker.json  tycoon_save.json  world_ledger.sqlite
demos/: README.md  dice_roller_v2.py  slime_soccer.py
dgt_harvest_rust/: Cargo.toml
docs/: ADJ_DASHBOARD.md  ADJ_SYSTEM_LAYERS.md  ASSET_INVENTORY.md  ASTEROIDS_ARCHAEOLOGY.md  COLONY_SYSTEM.md  COMPONENT_ANALYSIS.md  DEMOS.md  DEPLOYMENT_LOCK_v1.0.md  DUNGEON_CRAWLER_DESIGN.md  ENGINE_AUDIT.md  GOALS.md  IMPLEMENTATION_DECISION_TREE.md  MILESTONES.md  PHASE_D_REFACTORING_SUMMARY.md  PHASE_E_IMPLEMENTATION_ROADMAP.md  PROJECT_JOURNAL.md  RENDERING_AUDIT.md  REPO_AUDIT.md  ROADMAP.md  RPGCORE_CONSTITUTION.md  RPG_SYSTEMS_DESIGN.md  SCENE_MANAGER.md  SESSION_2026_02_14_SUMMARY.md  SESSION_PROTOCOL.md  STATE.md  TASKS.md  TECHNICAL_VISIONARY_SUMMARY.md  TECH_DEBT.md  TEST_HEALTH_REPORT.md  THE_LIVING_WORLD.md  TURBOSHELLS_AUDIT_REPORT.md  VISION.md  WORLD.md  agent_memory.md  phase-3-repository-inventory.md
final_validation/: FINAL_MANIFEST_V1.json  GOLDEN_MASTER_SUMMARY.md  golden_seed_epoch_10.json
godot_project/: build.bat
logs/: debug_output_outer.txt  test_output.txt
saves/: player.backup.json  player.json  racing_session_44431.json  racing_session_51757.json  racing_session_78698.json  racing_session_94368.json  roster.json  test_save.json  tower_defense_session_12347.json  tower_defense_session_18545.json  tower_defense_session_19310.json  tower_defense_session_19415.json  (+20 more)
scripts/: test_phase_c.py  (+15 more)
(+1850 files in other folders)
