[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dgt-engine"
version = "1.0.0"
description = "A High-Concurrency Neuro-Evolutionary SDK for Cross-Engine Simulation"
authors = [
    {name = "DGT Platform Team", email = "team@dgt-platform.dev"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12,<3.13"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.12 Only",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["neuro-evolution", "physics", "simulation", "gaming", "ai", "genetic-algorithm"]
dependencies = [
    "pydantic>=2.6.0",
    "loguru>=0.7.2",
    "rich>=13.7.0",
    "Pillow>=10.2.0",
    "numpy>=1.26.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "types-Pillow>=10.2.0.20240106",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
]
